Fixed contrast on banner

--- a/styles/scss/components/_sections.scss
+++ b/styles/scss/components/_sections.scss
@@ -14,6 +14,7 @@ header {
   //background: url('../img/concert02_with_text.jpg') no-repeat top center;
   background: url('../img/concert02_no_text.jpg') no-repeat top center;
   background-size: cover;
+  background-color: black;
   overflow: hidden;
   padding-top: 60px;
   height: 350px;
