--- a/styles/scss/components/_typography.scss
+++ b/styles/scss/components/_typography.scss
@@ -35,7 +35,7 @@ h3 {
     font-family: $font-stack;
   }
   h1 {
-    color: $bg-color;
+    color: white;
     font-size: 2.5em;
     line-height: 1em;
     margin-bottom: 0.25em;
